crates/nirvash-macros/tests/fixtures/case_scoped_constraints_invalid_option.stderr
error: unsupported registration option; expected cases(...)
  --> tests/fixtures/case_scoped_constraints_invalid_option.rs:34:26
   |
34 | #[state_constraint(Spec, nope("case_a"))]
   |                          ^^^^

warning: unused import: `BoolExpr`
 --> tests/fixtures/case_scoped_constraints_invalid_option.rs:1:15
  |
1 | use nirvash::{BoolExpr, ModelCase, TransitionSystem};
  |               ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
